--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -33,6 +33,7 @@ jobs:
         uses: ruby/setup-ruby@v1.111.0
         with:
           bundler-cache: true
+          ruby-version: '2.6.5'
       # Add or replace database setup steps here
       - name: Set up database schema
         env:
@@ -52,6 +53,7 @@ jobs:
         uses: ruby/setup-ruby@v1.111.0
         with:
           bundler-cache: true
+          ruby-version: '2.6.5'
       # Add or replace any other lints here
       - name: Security audit dependencies
         run: bin/bundler-audit --update
