--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -33,7 +33,7 @@ jobs:
         uses: ruby/setup-ruby@v1.111.0
         with:
           bundler-cache: true
-          ruby-version: '2.7.x'
+          ruby-version: '2.7.5'
       # Add or replace database setup steps here
       - name: Set up database schema
         env:
@@ -53,7 +53,7 @@ jobs:
         uses: ruby/setup-ruby@v1.111.0
         with:
           bundler-cache: true
-          ruby-version: '2.7.x'
+          ruby-version: '2.7.5'
       # Add or replace any other lints here
       - name: Security audit dependencies
         run: bin/bundler-audit --update
