--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           bundler-cache: true
           ruby-version: '2.7.5'
+        run: bundle update
       # Add or replace database setup steps here
       - name: Set up database schema
         env:
@@ -54,6 +55,7 @@ jobs:
         with:
           bundler-cache: true
           ruby-version: '2.7.5'
+        run: bundle update
       # Add or replace any other lints here
       - name: Security audit dependencies
         run: bin/bundler-audit --update
