--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -38,7 +38,7 @@ jobs:
         env:
           db_username: rails
           db_password: password
-        run: bin/rails db:create && bin/rails db:migrate
+        run: bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run specs
         run: rspec
