--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -41,7 +41,7 @@ jobs:
         run: bin/rails db:create && bin/rails db:schema:load
       # Add or replace test runners here
       - name: Run specs
-        run: rspec
+        run: bundle exec rspec
 
   lint:
     runs-on: ubuntu-latest
