Run bundle-audit with bundle exec

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -54,7 +54,7 @@ jobs:
           bundler-cache: true
       # Add or replace any other lints here
       - name: Security audit dependencies
-        run: rake bundle:audit
+        run: bundle exec rake bundle:audit
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Lint Ruby files
