--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -56,6 +56,6 @@ jobs:
       - name: Security audit dependencies
         run: bundle exec rake bundle:audit
       - name: Security audit application code
-        run: brakeman -q -w2
+        run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
         run: bin/rubocop --parallel
