--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -75,7 +75,7 @@ Lint/DuplicateBranch: # new in 1.3
 Lint/DuplicateRegexpCharacterClassElement: # new in 1.1
   Enabled: true
 Lint/EmptyBlock: # new in 1.1
-  Enabled: true
+  Enabled: false
 Lint/EmptyClass: # new in 1.3
   Enabled: true
 Lint/EmptyInPattern: # new in 1.16
@@ -179,4 +179,14 @@ Layout/EmptyLineAfterMagicComment:
 Style/StringLiterals:
   Enabled: false
 Style/RedundantReturn:
+  Enabled: false
+Lint/ShadowingOuterLocalVariable:
+  Enabled: false
+Style/CaseEquality:
+  Enabled: false
+Metrics/PerceivedComplexity:
+  Enabled: false
+Style/CharacterLiteral:
+  Enabled: false
+Layout/FirstArrayElementIndentation:
   Enabled: false
