--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -58,4 +58,4 @@ jobs:
       - name: Security audit application code
         run: bundle exec brakeman -q -w2
       - name: Lint Ruby files
-        run: bundle exec rubocop -A
+        run: bundle exec rubocop --parallel
