--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -57,3 +57,5 @@ jobs:
         run: bundle exec rake bundle:audit
       - name: Security audit application code
         run: bundle exec brakeman -q -w2
+      - name: Lint Ruby files
+        run: bundle exec rubocop --parallel
