--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - ./postgres-data:/var/lib/postgresql/data
+      - fazebuk-data:/var/lib/postgresql/data
     networks:
       - fazebuk_network
 
@@ -29,6 +29,6 @@ services:
       - db
 
 volumes:
-    postgres-data:
+    fazebuk-data:
 networks:
     fazebuk_network:
